ktags (1.0-e) stable; urgency=low

  * Debug logs for file enumeration and ctags

 -- Kirubakaran Shanmugam <kribakarans@gmail.com>  Sun, 20 Nov 2022 12:26:11 +0530

ktags (1.0-d) stable; urgency=low

  * Revamped cscope file scanning

 -- Kirubakaran Shanmugam <kribakarans@gmail.com>  Thu, 17 Nov 2022 20:07:55 +0530

ktags (1.0-c) stable; urgency=low

  * Added binary file formats to ignore

 -- Kirubakaran Shanmugam <kribakarans@gmail.com>  Sun, 06 Nov 2022 17:42:10 +0530

ktags (1.0-b) stable; urgency=low

  * Fixed failure to create aliases.

 -- Kirubakaran Shanmugam <kribakarans@gmail.com>  Thu, 03 Nov 2022 23:55:40 +0530

ktags (1.0-a) stable; urgency=low

  * Updated 'htags-server' parameters.

 -- Kirubakaran Shanmugam <kribakarans@gmail.com>  Thu, 03 Nov 2022 11:25:35 +0530

ktags (1.0-0) stable; urgency=low

  * Initial release.

 -- Kirubakaran Shanmugam <kribakarans@gmail.com>  Sun, 30 Oct 2022 21:10:10 +0530