@@ -2,9 +2,9 @@
 FROM ubuntu:20.04
 
 # install app dependencies
-RUN apt-get update && \
-    apt-get install -y cscope exuberant-ctags global make python3 tree && \
-    rm -rf /var/lib/apt/lists/* && apt clean
+RUN apt update && \
+    apt install -y cscope exuberant-ctags global libcgi-pm-perl make perl python3 tree && \
+    apt clean && rm -rf /var/lib/apt/lists/*
 
 # setup container
 RUN mkdir -p  /usr/local/bin/ /root/__ktags
@@ -12,7 +12,6 @@ RUN ln -sf /usr/bin/python3 /usr/local/bin/python
 
 # install package
 COPY ./__ktags /root/__ktags
-RUN chown -vR $USER:$USER /root/__ktags
 COPY ktags.out /usr/local/bin/ktags
 
 # final configuration
