@@ -1,5 +1,6 @@
 ktags (1.0-e) stable; urgency=low
 
+  * Updated file exclude patterns
   * Debug logs for file enumeration and ctags
 
  -- Kirubakaran Shanmugam <kribakarans@gmail.com>  Sun, 20 Nov 2022 12:26:11 +0530
